--- a/composer.json
+++ b/composer.json
@@ -1,48 +1,76 @@
 {
-    "name": "theihasan/laravel-nightwatch-dual-agent",
-    "description": "Dual agent monitoring for Laravel Nightwatch with database storage",
-    "keywords": ["laravel", "nightwatch", "monitoring", "metrics", "database"],
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Ihasan",
-            "email": "theihasan@gmail.com"
-        }
-    ],
-    "require": {
-        "php": "^8.2",
-        "laravel/framework": "^10.0|^11.0|^12.0",
-        "laravel/nightwatch": "^1.0",
-        "illuminate/support": "^10.0|^11.0|^12.0"
-    },
-    "require-dev": {
-        "orchestra/testbench": "^8.0|^9.0",
-        "phpunit/phpunit": "^10.0",
-        "mockery/mockery": "^1.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Ihasan\\DualAgent\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Ihasan\\DualAgent\\Tests\\": "tests/"
-        }
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "Ihasan\\DualAgent\\DualAgentServiceProvider"
-            ],
-            "aliases": {
-                "DualAgent": "Ihasan\\DualAgent\\Facades\\DualAgent"
-            }
-        }
-    },
-    "config": {
-        "sort-packages": true
-    },
-    "minimum-stability": "stable",
-    "prefer-stable": true
+  "name": "theihasan/laravel-nightwatch-dual-agent",
+  "description": "Dual agent monitoring for Laravel Nightwatch with database storage",
+  "keywords": [
+    "laravel",
+    "nightwatch",
+    "monitoring",
+    "metrics",
+    "database"
+  ],
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Ihasan",
+      "email": "theihasan@gmail.com"
+    }
+  ],
+  "require": {
+    "php": "^8.2",
+    "laravel/framework": "^10.0|^11.0|^12.0",
+    "laravel/nightwatch": "^1.0",
+    "illuminate/support": "^10.0|^11.0|^12.0"
+  },
+  "require-dev": {
+    "barryvdh/laravel-ide-helper": "^3.6",
+    "larastan/larastan": "^3.7",
+    "mockery/mockery": "^1.0",
+    "orchestra/testbench": "^8.0|^9.0",
+    "phpstan/phpstan": "^2.1",
+    "phpunit/phpunit": "^10.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Ihasan\\DualAgent\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Ihasan\\DualAgent\\Tests\\": "tests/"
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Ihasan\\DualAgent\\DualAgentServiceProvider"
+      ],
+      "aliases": {
+        "DualAgent": "Ihasan\\DualAgent\\Facades\\DualAgent"
+      }
+    }
+  },
+  "scripts": {
+    "phpstan": "phpstan analyse --memory-limit=4G",
+    "phpstan:baseline": "phpstan analyse --generate-baseline",
+    "phpstan:clear": "phpstan clear-result-cache",
+    "phpstan:pro": "phpstan analyse --pro",
+    "test:types": "@phpstan",
+    "test:all": [
+      "@test:types",
+      "@test"
+    ]
+  },
+  "scripts-descriptions": {
+    "phpstan": "Run PHPStan static analysis with 2GB memory limit",
+    "phpstan:baseline": "Generate PHPStan baseline file for existing issues",
+    "phpstan:clear": "Clear PHPStan result cache",
+    "phpstan:pro": "Run PHPStan with Pro features (if available)",
+    "test:types": "Alias for phpstan command",
+    "test:all": "Run both type checking and unit tests"
+  },
+  "config": {
+    "sort-packages": true
+  },
+  "minimum-stability": "stable",
+  "prefer-stable": true
 }
